wrong verifier message for bogus return type

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 17
    • Component/s: hotspot
    • b13

      x4e_x4e wrote:
      There is a typo in an error message in verifier.cpp on line 1678, It should probably read "Method does not expect a return value" instead of "Method expects a return value".

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Harold Seigel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: