8262368: wrong verifier message for bogus return type